[Bug] Screen flickering and white fields appearing when scrolling (up/down) on Honor 7 (Mali-T628)
Categories
(Core :: Graphics, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox87 | --- | fixed |
People
(Reporter: kbrosnan, Assigned: jnicol)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
From github: https://github.com/mozilla-mobile/fenix/issues/16772.
Steps to reproduce
During scrolling under WebRender some white fields are appearing and begin to flicker, the cursor also has issues (has gone or not writing until scrolling a screen up or down)
Expected behaviour
Smooth scrolling
Actual behaviour
See above
Device information
Honor 7
- Android device: Honor 7, Android 6
- Fenix version: Nightly 201127 17:01 (Build #2015778123)
Change performed by the Move to Bugzilla add-on.
![]() |
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
![]() |
||
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
With help from the reporter on github we have established this is due to partial present. (presumably a bug in the driver). This was also reported by another user with a different Mali-T device here.
The first device is an Honor 7 (Mali T628, Android 6) and the second is a Lenovo K3 Note (Mali T760, Android 7.1.2). It seems safest to disable partial present on all Mali-Txxx. (Or perhaps just T6xx and T7xx, as I have encountered no issues on my T830 device.)
Assignee | ||
Comment 2•4 years ago
|
||
Due to rendering issues reported on a Mali-T628 and Mali-T760, disable
partial present on all Mali-T6xx and T7xx devices. We know that not
all T6xx and T7xx devices are affected, so this is being cautious. The
driver version is probably more important than the GPU model. We
should make the block more precise once more is known about the bug.
Updated•4 years ago
|
Comment 4•4 years ago
|
||
bugherder |
Description
•