gfx/config/gfxConfigManager.cpp
@@ -390,6 +390,17 @@ void gfxConfigManager::ConfigureWebRender() {
   if (mWrPartialPresent) {
     if (mFeatureWr->IsEnabled() || mFeatureWrSoftware->IsEnabled()) {
       mFeatureWrPartial->EnableByDefault();
+
+      nsString adapter;
+      mGfxInfo->GetAdapterDeviceID(adapter);
+      // Block partial present on Mali-T6xx and T7xx GPUs due to rendering
+      // issues. See bug 1680087.
+      if (adapter.Find("Mali-T6", /*ignoreCase*/ true) >= 0 ||
+          adapter.Find("Mali-T7", /*ignoreCase*/ true) >= 0) {
+        mFeatureWrPartial->Disable(FeatureStatus::Blocked,
+                                   "Partial present blocked on Mali-Txxx",
+                                   "FEATURE_FAILURE_PARTIAL_PRESENT_MALI"_ns);
+      }
     }
   }
 }
